@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.mymovies.it"
        name="MyMovies.it"
-        version="1.1.2"
+       version="1.1.3"
        provider-name="muttley">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -16,12 +16,19 @@
     <summary lang="hu">MyMovies.it Film scraper</summary> 
     <summary lang="kr">MyMovies.it 영화 스크래퍼</summary>
     <summary lang="pt">Scraper de filmes MyMovies.it</summary>
-    <description lang="it">Riporta problemi o suggerimenti su: https://code.google.com/p/mymovies-xbmc-scraper/issues/list o http://forum.xbmc.org/showthread.php?t=58141</description>
-    <description lang="en">Report problems or suggest on: https://code.google.com/p/mymovies-xbmc-scraper/issues/list o http://forum.xbmc.org/showthread.php?t=58141</description>
+    <description lang="it">Riporta problemi o suggerimenti su: 
+https://code.google.com/p/mymovies-xbmc-scraper/issues/list
+http://forum.xbmc.org/showthread.php?t=58141
+
+Buona visione!</description>
+    <description lang="en">Report problems or suggest on: 
+https://code.google.com/p/mymovies-xbmc-scraper/issues/list
+http://forum.xbmc.org/showthread.php?t=58141
+
+Enjoy!</description>
     <description lang="hu">Film információk letöltése a www.mymovies.it webhelyről</description>
     <description lang="kr">MyMovies.it 에서 영화 정보 다운로드</description>
     <description lang="pt">Descarregar informação de filmes de www.mymovies.it</description>
     <platform>all</platform>
-    <broken>will not download most of the details, nor artwork</broken>
   </extension>
 </addon>
